tests/parser/invalid/004-if-with-elif-without-condition.man
def main()
    if foo()
        bar()
    elif
        baz()
    end
end
